Edited Model to use agent spawn method when creating agent. Moved spawn method from mobile agent to mimimal agent

--- a/base_model_mesa/rich_model/test_model.ipynb
+++ b/base_model_mesa/rich_model/test_model.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "70059384-7a53-4dcf-a4e8-9331b4cfc6df",
    "metadata": {
     "tags": []
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "from agents import MinimalAgent, Buildings, MobileAgent\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "fe8299e7-9aa3-4f77-9f96-28e2889d8a4a",
    "metadata": {
     "tags": []
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "71c081e2-b5bb-4fc5-a5c8-c378c0faeb99",
    "metadata": {
     "tags": []
@@ -89,21 +89,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4901\n",
-      "12426\n",
-      "11551\n",
-      "11949\n",
-      "9778\n",
-      "#30a080\n",
-      "4901\n",
-      "#20b000\n",
-      "12426\n",
-      "#c0b070\n",
-      "11551\n",
-      "#400040\n",
-      "11949\n",
-      "#b0e0d0\n",
-      "9778\n"
+      "14593\n",
+      "2792\n",
+      "13514\n",
+      "10603\n",
+      "4812\n",
+      "#202090\n",
+      "14593\n",
+      "#c060b0\n",
+      "2792\n",
+      "#103050\n",
+      "13514\n",
+      "#0020e0\n",
+      "10603\n",
+      "#00d0e0\n",
+      "4812\n"
      ]
     }
    ],
@@ -128,93 +128,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "This is step: 0\n",
-      "Hello world! I am agent: 100001\n",
-      " my node id is: 12426\n",
-      " my color is: #50c080\n",
-      "Hello world! I am agent: 300001\n",
-      " my node id is: 12426\n",
-      " my color is: #10a090\n",
-      "Hello world! I am agent: 100000\n",
-      " my node id is: 4901\n",
-      " my color is: #30e040\n",
-      "Hello world! I am agent: 200001\n",
-      " my node id is: 12426\n",
-      " my color is: #20b000\n",
-      "Hello world! I am agent: 300004\n",
-      " my node id is: 9778\n",
-      " my color is: #70e030\n",
-      "Hello world! I am agent: 200002\n",
-      " my node id is: 11551\n",
-      " my color is: #c0b070\n",
-      "Hello world! I am agent: 200003\n",
-      " my node id is: 11949\n",
-      " my color is: #400040\n",
-      "Hello world! I am agent: 100003\n",
-      " my node id is: 11949\n",
-      " my color is: #f07000\n",
-      "Hello world! I am agent: 300002\n",
-      " my node id is: 11551\n",
-      " my color is: #80a040\n",
-      "Hello world! I am agent: 200000\n",
-      " my node id is: 4901\n",
-      " my color is: #30a080\n",
-      "Hello world! I am agent: 200004\n",
-      " my node id is: 9778\n",
-      " my color is: #b0e0d0\n",
-      "Hello world! I am agent: 300003\n",
-      " my node id is: 11949\n",
-      " my color is: #20c0f0\n",
       "Hello world! I am agent: 100002\n",
-      " my node id is: 11551\n",
-      " my color is: #408060\n",
+      " my node id is: 13514\n",
+      " my color is: #9020c0\n",
+      "Hello world! I am agent: 300004\n",
+      " my node id is: 4812\n",
+      " my color is: #300090\n",
+      "Hello world! I am agent: 200001\n",
+      " my node id is: 2792\n",
+      " my color is: #c060b0\n",
+      "Hello world! I am agent: 200003\n",
+      " my node id is: 10603\n",
+      " my color is: #0020e0\n",
       "Hello world! I am agent: 100004\n",
-      " my node id is: 9778\n",
-      " my color is: #f0c080\n",
+      " my node id is: 4812\n",
+      " my color is: #003070\n",
       "Hello world! I am agent: 300000\n",
-      " my node id is: 4901\n",
-      " my color is: #605020\n",
+      " my node id is: 14593\n",
+      " my color is: #e08020\n",
+      "Hello world! I am agent: 100001\n",
+      " my node id is: 2792\n",
+      " my color is: #7020b0\n",
+      "Hello world! I am agent: 200004\n",
+      " my node id is: 4812\n",
+      " my color is: #00d0e0\n",
+      "Hello world! I am agent: 200000\n",
+      " my node id is: 14593\n",
+      " my color is: #202090\n",
+      "Hello world! I am agent: 200002\n",
+      " my node id is: 13514\n",
+      " my color is: #103050\n",
+      "Hello world! I am agent: 300003\n",
+      " my node id is: 10603\n",
+      " my color is: #c04010\n",
+      "Hello world! I am agent: 100000\n",
+      " my node id is: 14593\n",
+      " my color is: #80f0f0\n",
+      "Hello world! I am agent: 100003\n",
+      " my node id is: 10603\n",
+      " my color is: #a05010\n",
+      "Hello world! I am agent: 300001\n",
+      " my node id is: 2792\n",
+      " my color is: #d0f0f0\n",
+      "Hello world! I am agent: 300002\n",
+      " my node id is: 13514\n",
+      " my color is: #20b0a0\n",
       "   Number of Agents\n",
       "0                 5\n",
       "1                 5\n",
       "              Agent ID Agent Colour                         family\n",
       "Step AgentID                                                      \n",
-      "0    100000     100000      #30e040  <class 'agents.MinimalAgent'>\n",
-      "     100001     100001      #50c080  <class 'agents.MinimalAgent'>\n",
-      "     100002     100002      #408060  <class 'agents.MinimalAgent'>\n",
-      "     100003     100003      #f07000  <class 'agents.MinimalAgent'>\n",
-      "     100004     100004      #f0c080  <class 'agents.MinimalAgent'>\n",
-      "     200000     200000      #30a080     <class 'agents.Buildings'>\n",
-      "     200001     200001      #20b000     <class 'agents.Buildings'>\n",
-      "     200002     200002      #c0b070     <class 'agents.Buildings'>\n",
-      "     200003     200003      #400040     <class 'agents.Buildings'>\n",
-      "     200004     200004      #b0e0d0     <class 'agents.Buildings'>\n",
-      "     300000     300000      #605020   <class 'agents.MobileAgent'>\n",
-      "     300001     300001      #10a090   <class 'agents.MobileAgent'>\n",
-      "     300002     300002      #80a040   <class 'agents.MobileAgent'>\n",
-      "     300003     300003      #20c0f0   <class 'agents.MobileAgent'>\n",
-      "     300004     300004      #70e030   <class 'agents.MobileAgent'>\n",
-      "1    100000     100000      #30e040  <class 'agents.MinimalAgent'>\n",
-      "     100001     100001      #50c080  <class 'agents.MinimalAgent'>\n",
-      "     100002     100002      #408060  <class 'agents.MinimalAgent'>\n",
-      "     100003     100003      #f07000  <class 'agents.MinimalAgent'>\n",
-      "     100004     100004      #f0c080  <class 'agents.MinimalAgent'>\n",
-      "     200000     200000      #30a080     <class 'agents.Buildings'>\n",
-      "     200001     200001      #20b000     <class 'agents.Buildings'>\n",
-      "     200002     200002      #c0b070     <class 'agents.Buildings'>\n",
-      "     200003     200003      #400040     <class 'agents.Buildings'>\n",
-      "     200004     200004      #b0e0d0     <class 'agents.Buildings'>\n",
-      "     300000     300000      #605020   <class 'agents.MobileAgent'>\n",
-      "     300001     300001      #10a090   <class 'agents.MobileAgent'>\n",
-      "     300002     300002      #80a040   <class 'agents.MobileAgent'>\n",
-      "     300003     300003      #20c0f0   <class 'agents.MobileAgent'>\n",
-      "     300004     300004      #70e030   <class 'agents.MobileAgent'>\n"
+      "0    100000     100000      #80f0f0  <class 'agents.MinimalAgent'>\n",
+      "     100001     100001      #7020b0  <class 'agents.MinimalAgent'>\n",
+      "     100002     100002      #9020c0  <class 'agents.MinimalAgent'>\n",
+      "     100003     100003      #a05010  <class 'agents.MinimalAgent'>\n",
+      "     100004     100004      #003070  <class 'agents.MinimalAgent'>\n",
+      "     200000     200000      #202090     <class 'agents.Buildings'>\n",
+      "     200001     200001      #c060b0     <class 'agents.Buildings'>\n",
+      "     200002     200002      #103050     <class 'agents.Buildings'>\n",
+      "     200003     200003      #0020e0     <class 'agents.Buildings'>\n",
+      "     200004     200004      #00d0e0     <class 'agents.Buildings'>\n",
+      "     300000     300000      #e08020   <class 'agents.MobileAgent'>\n",
+      "     300001     300001      #d0f0f0   <class 'agents.MobileAgent'>\n",
+      "     300002     300002      #20b0a0   <class 'agents.MobileAgent'>\n",
+      "     300003     300003      #c04010   <class 'agents.MobileAgent'>\n",
+      "     300004     300004      #300090   <class 'agents.MobileAgent'>\n",
+      "1    100000     100000      #80f0f0  <class 'agents.MinimalAgent'>\n",
+      "     100001     100001      #7020b0  <class 'agents.MinimalAgent'>\n",
+      "     100002     100002      #9020c0  <class 'agents.MinimalAgent'>\n",
+      "     100003     100003      #a05010  <class 'agents.MinimalAgent'>\n",
+      "     100004     100004      #003070  <class 'agents.MinimalAgent'>\n",
+      "     200000     200000      #202090     <class 'agents.Buildings'>\n",
+      "     200001     200001      #c060b0     <class 'agents.Buildings'>\n",
+      "     200002     200002      #103050     <class 'agents.Buildings'>\n",
+      "     200003     200003      #0020e0     <class 'agents.Buildings'>\n",
+      "     200004     200004      #00d0e0     <class 'agents.Buildings'>\n",
+      "     300000     300000      #e08020   <class 'agents.MobileAgent'>\n",
+      "     300001     300001      #d0f0f0   <class 'agents.MobileAgent'>\n",
+      "     300002     300002      #20b0a0   <class 'agents.MobileAgent'>\n",
+      "     300003     300003      #c04010   <class 'agents.MobileAgent'>\n",
+      "     300004     300004      #300090   <class 'agents.MobileAgent'>\n"
      ]
     }
    ],
@@ -236,57 +236,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Hello world! I am agent: 100000\n",
-      " my node id is: 4901\n",
-      " my color is: #30e040\n",
+      " my node id is: 14593\n",
+      " my color is: #80f0f0\n",
       "Hello world! I am agent: 100001\n",
-      " my node id is: 12426\n",
-      " my color is: #50c080\n",
+      " my node id is: 2792\n",
+      " my color is: #7020b0\n",
       "Hello world! I am agent: 100002\n",
-      " my node id is: 11551\n",
-      " my color is: #408060\n",
+      " my node id is: 13514\n",
+      " my color is: #9020c0\n",
       "Hello world! I am agent: 100003\n",
-      " my node id is: 11949\n",
-      " my color is: #f07000\n",
+      " my node id is: 10603\n",
+      " my color is: #a05010\n",
       "Hello world! I am agent: 100004\n",
-      " my node id is: 9778\n",
-      " my color is: #f0c080\n",
+      " my node id is: 4812\n",
+      " my color is: #003070\n",
       "Hello world! I am agent: 200000\n",
-      " my node id is: 4901\n",
-      " my color is: #30a080\n",
+      " my node id is: 14593\n",
+      " my color is: #202090\n",
       "Hello world! I am agent: 200001\n",
-      " my node id is: 12426\n",
-      " my color is: #20b000\n",
+      " my node id is: 2792\n",
+      " my color is: #c060b0\n",
       "Hello world! I am agent: 200002\n",
-      " my node id is: 11551\n",
-      " my color is: #c0b070\n",
+      " my node id is: 13514\n",
+      " my color is: #103050\n",
       "Hello world! I am agent: 200003\n",
-      " my node id is: 11949\n",
-      " my color is: #400040\n",
+      " my node id is: 10603\n",
+      " my color is: #0020e0\n",
       "Hello world! I am agent: 200004\n",
-      " my node id is: 9778\n",
-      " my color is: #b0e0d0\n",
+      " my node id is: 4812\n",
+      " my color is: #00d0e0\n",
       "Hello world! I am agent: 300000\n",
-      " my node id is: 4901\n",
-      " my color is: #605020\n",
+      " my node id is: 14593\n",
+      " my color is: #e08020\n",
       "Hello world! I am agent: 300001\n",
-      " my node id is: 12426\n",
-      " my color is: #10a090\n",
+      " my node id is: 2792\n",
+      " my color is: #d0f0f0\n",
       "Hello world! I am agent: 300002\n",
-      " my node id is: 11551\n",
-      " my color is: #80a040\n",
+      " my node id is: 13514\n",
+      " my color is: #20b0a0\n",
       "Hello world! I am agent: 300003\n",
-      " my node id is: 11949\n",
-      " my color is: #20c0f0\n",
+      " my node id is: 10603\n",
+      " my color is: #c04010\n",
       "Hello world! I am agent: 300004\n",
-      " my node id is: 9778\n",
-      " my color is: #70e030\n"
+      " my node id is: 4812\n",
+      " my color is: #300090\n"
      ]
     }
    ],
@@ -309,14 +309,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "alpha = model.create_agents(MinimalAgent)\n",
     "alpha(100)\n",
     "alpha(102)\n",
     "\n",
-    "beta = model.create_agents(MobileAgent)"
+    "beta = model.create_agents(MobileAgent)\n",
+    "check = beta(101)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "check2 = check.find_path(10000)"
    ],
    "metadata": {
     "collapsed": false
