Implemented Damage from tremor function for buildings agent

--- a/base_model_mesa/rich_model/_archive/test_getEdgeList.ipynb
+++ b/base_model_mesa/rich_model/_archive/test_getEdgeList.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -44,7 +44,7 @@
    ],
    "source": [
     "\n",
-    "with open('street_network.data', 'rb') as file:\n",
+    "with open('../street_network.data', 'rb') as file:\n",
     "    G = pickle.load(file)\n",
     "G = nx.relabel_nodes(G, {15012: 0})\n",
     "print(G)"
@@ -55,7 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
