--- a/base_model_mesa/rich_model/test_model.ipynb
+++ b/base_model_mesa/rich_model/test_model.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "70059384-7a53-4dcf-a4e8-9331b4cfc6df",
    "metadata": {
     "tags": []
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "from agents import MinimalAgent, Buildings, MobileAgent\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fe8299e7-9aa3-4f77-9f96-28e2889d8a4a",
    "metadata": {
     "tags": []
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "71c081e2-b5bb-4fc5-a5c8-c378c0faeb99",
    "metadata": {
     "tags": []
@@ -106,8 +106,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is step: 0\n",
+      "   Number of Agents\n",
+      "0                 5\n",
+      "1                 5\n",
+      "Empty DataFrame\n",
+      "Columns: [Agent ID, Agent Colour, family]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
    "source": [
     "model.step()\n",
     "\n",
@@ -126,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "for a in model.schedule.agent_buffer():\n",
@@ -147,15 +161,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<agents.Buildings at 0x27bf9f38e50>"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "alpha = model.create_agents(MinimalAgent)\n",
-    "alpha(100)\n",
-    "alpha(102)\n",
-    "\n",
-    "beta = model.create_agents(MobileAgent)\n",
-    "check = beta(101)\n"
+    "alpha = model.create_agents(Buildings)\n",
+    "check = alpha(100)\n",
+    "alpha(102)\n"
    ],
    "metadata": {
     "collapsed": false
@@ -163,10 +183,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 28,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "State: 3; Strength: 6.505387759416259\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "check2 = check.find_path(10000)"
+    "print(f'State: {check.state}; Strength: {check.strength}')\n",
+    "check.damage_from_tremor()\n",
+    "print(check.state)"
    ],
    "metadata": {
     "collapsed": false
