Injury function outline for Citizens and modified model to contain a seperate list of buildings, spawn buildings inside that list

--- a/base_model_mesa/rich_model/test_model.ipynb
+++ b/base_model_mesa/rich_model/test_model.ipynb
@@ -165,7 +165,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<agents.Buildings at 0x27bf9f38e50>"
+      "text/plain": "<agents.Buildings at 0x1f7e7138e20>"
      },
      "execution_count": 7,
      "metadata": {},
@@ -183,21 +183,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "State: 3; Strength: 6.505387759416259\n",
-      "3\n"
+      "State: 0; Strength: 7.721769311678646\n",
+      "0\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "<agents.Buildings at 0x1f7e9598820>"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "print(f'State: {check.state}; Strength: {check.strength}')\n",
-    "check.damage_from_tremor()\n",
-    "print(check.state)"
+    "check.damage_from_tremor(1)\n",
+    "print(check.state)\n",
+    "\n",
+    "alpha(1)"
    ],
    "metadata": {
     "collapsed": false
