--- a/base_model_mesa/rich_model/test_model.ipynb
+++ b/base_model_mesa/rich_model/test_model.ipynb
@@ -56,7 +56,7 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "from agents import MinimalAgent, Buildings, MobileAgent\n",
+    "from agents import MinimalAgent, Buildings, MobileAgent, Citizen\n",
     "from model import  MinimalModel"
    ],
    "metadata": {
@@ -162,20 +162,20 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "<agents.Buildings at 0x1f7e7138e20>"
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "alpha = model.create_agents(Buildings)\n",
-    "check = alpha(100)\n",
-    "alpha(102)\n"
+    "create_buidling = model.create_agents(Buildings)\n",
+    "building1 = create_buidling(100)\n",
+    "building2 = create_buidling(101, capacity = 200)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Testing the Building Damage Function"
    ],
    "metadata": {
     "collapsed": false
@@ -183,31 +183,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "State: 0; Strength: 7.721769311678646\n",
-      "0\n"
+      "State: 3; Strength: 8.656685278118605\n",
+      "State: 3\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": "<agents.Buildings at 0x1f7e9598820>"
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(f'State: {check.state}; Strength: {check.strength}')\n",
-    "check.damage_from_tremor(1)\n",
-    "print(check.state)\n",
+    "print(f'State: {building1.state}; Strength: {building1.strength}')\n",
+    "building1.damage_from_tremor(8.7)\n",
+    "print(f'State: {building1.state}')\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "Agent with unique id \"<class 'agents.Citizen'>_0\" already added to scheduler",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mException\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_33368\\3109077453.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[0mcreate_citizens\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mmodel\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mcreate_agents\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mCitizen\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      2\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 3\u001B[1;33m \u001B[0mtestCit\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mcreate_citizens\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      4\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\Programming\\MESA\\Repository\\EarthquakeABM-1211\\base_model_mesa\\rich_model\\model.py\u001B[0m in \u001B[0;36m_create_agent\u001B[1;34m(location, **kwargs)\u001B[0m\n\u001B[0;32m     82\u001B[0m             \u001B[0munique_id\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;34mf\"{agent_type_str}_{agent_id}\"\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     83\u001B[0m             \u001B[0ma\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0magent_type\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0munique_id\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mmodel\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;33m**\u001B[0m\u001B[0mkwargs\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 84\u001B[1;33m             \u001B[0mmodel\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mschedule\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0madd\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0ma\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     85\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     86\u001B[0m             \u001B[0magent_id\u001B[0m \u001B[1;33m+=\u001B[0m \u001B[1;36m1\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\anaconda3\\envs\\SEN1121\\lib\\site-packages\\mesa\\time.py\u001B[0m in \u001B[0;36madd\u001B[1;34m(self, agent)\u001B[0m\n\u001B[0;32m     66\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     67\u001B[0m         \u001B[1;32mif\u001B[0m \u001B[0magent\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0munique_id\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_agents\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 68\u001B[1;33m             raise Exception(\n\u001B[0m\u001B[0;32m     69\u001B[0m                 \u001B[1;34mf\"Agent with unique id {repr(agent.unique_id)} already added to scheduler\"\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     70\u001B[0m             )\n",
+      "\u001B[1;31mException\u001B[0m: Agent with unique id \"<class 'agents.Citizen'>_0\" already added to scheduler"
+     ]
+    }
+   ],
+   "source": [
+    "create_citizens = model.create_agents(Citizen)\n",
     "\n",
-    "alpha(1)"
+    "testCit = create_citizens(1)\n"
    ],
    "metadata": {
     "collapsed": false
