refactored Model file, created run file, started implementing Scenario 1

--- a/base_model_mesa/make_network_object.ipynb
+++ b/base_model_mesa/make_network_object.ipynb
@@ -5,16 +5,7 @@
    "execution_count": 1,
    "id": "31802f56-6e7f-4d77-9ac1-f8ec2026004a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "<networkx.classes.graph.Graph at 0x1bdc7275610>"
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import networkx as nx\n",
     "import pandas as pd\n",
@@ -32,12 +23,14 @@
     "    positions[n]= (float(row['x']),float(row['y']))\n",
     "\n",
     "nx.set_node_attributes(G,positions,\"pos\")\n",
-    "nx.relabel_nodes(G, {15012: 0})\n"
+    "nx.relabel_nodes(G, {15012: 0})\n",
+    "\n",
+    "G.remove_nodes_from(list(nx.isolates(G)))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
@@ -57,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "8ae9a9c6-2c0f-4719-8685-77a2a2134792",
    "metadata": {},
    "outputs": [
@@ -83,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "214d448e-35a3-4352-89e9-2657c55de1b6",
    "metadata": {},
    "outputs": [],
@@ -94,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "e2dda8fd-9e08-45fa-a4b8-f4d8523489e4",
    "metadata": {},
    "outputs": [
@@ -103,38 +96,38 @@
      "output_type": "stream",
      "text": [
       "This is step: 0\n",
-      "Hello world! I am agent: 8\n",
-      "Hello world! I am agent: 9\n",
-      "Hello world! I am agent: 6\n",
-      "Hello world! I am agent: 1\n",
       "Hello world! I am agent: 2\n",
+      "Hello world! I am agent: 1\n",
+      "Hello world! I am agent: 4\n",
+      "Hello world! I am agent: 6\n",
+      "Hello world! I am agent: 8\n",
       "Hello world! I am agent: 0\n",
       "Hello world! I am agent: 3\n",
-      "Hello world! I am agent: 4\n",
+      "Hello world! I am agent: 9\n",
       "Hello world! I am agent: 5\n",
       "Hello world! I am agent: 7\n",
       "This is step: 1\n",
+      "Hello world! I am agent: 8\n",
+      "Hello world! I am agent: 2\n",
+      "Hello world! I am agent: 3\n",
+      "Hello world! I am agent: 4\n",
       "Hello world! I am agent: 6\n",
       "Hello world! I am agent: 7\n",
-      "Hello world! I am agent: 2\n",
-      "Hello world! I am agent: 4\n",
-      "Hello world! I am agent: 5\n",
-      "Hello world! I am agent: 3\n",
-      "Hello world! I am agent: 9\n",
-      "Hello world! I am agent: 8\n",
-      "Hello world! I am agent: 0\n",
       "Hello world! I am agent: 1\n",
+      "Hello world! I am agent: 9\n",
+      "Hello world! I am agent: 5\n",
+      "Hello world! I am agent: 0\n",
       "This is step: 2\n",
+      "Hello world! I am agent: 8\n",
+      "Hello world! I am agent: 5\n",
       "Hello world! I am agent: 9\n",
-      "Hello world! I am agent: 1\n",
       "Hello world! I am agent: 6\n",
+      "Hello world! I am agent: 1\n",
+      "Hello world! I am agent: 4\n",
       "Hello world! I am agent: 0\n",
       "Hello world! I am agent: 7\n",
       "Hello world! I am agent: 2\n",
-      "Hello world! I am agent: 8\n",
       "Hello world! I am agent: 3\n",
-      "Hello world! I am agent: 4\n",
-      "Hello world! I am agent: 5\n",
       "   Number of Agents\n",
       "0                10\n",
       "1                10\n",
@@ -258,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "6767fe18-0d24-47a4-bfdf-e5237abf8d18",
    "metadata": {},
    "outputs": [],
