--- a/base_model_mesa/rich_model/BatchRun.ipynb
+++ b/base_model_mesa/rich_model/BatchRun.ipynb
@@ -2,26 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "f3c1ebfc",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2644748596.py, line 1)",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Kaninik\\AppData\\Local\\Temp\\ipykernel_19128\\651721800.py:34: DeprecationWarning: BatchRunner class has been replaced by batch_run function. Please see documentation.\n",
+      "  batch_run = BatchRunner(MinimalModel, parameters, 10)\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'int' object has no attribute 'keys'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\pierr\\AppData\\Local\\Temp\\ipykernel_8772\\2644748596.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    from mesa.batchrunner import BatchRunner 'Import the BatchRunner module from Mesa '\u001b[0m\n\u001b[1;37m                                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_19128\\651721800.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     32\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     33\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 34\u001B[1;33m \u001B[0mbatch_run\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mBatchRunner\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mMinimalModel\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mparameters\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m10\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     35\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     36\u001B[0m \u001B[1;34m'specifying the model class, the parameter settings, the number of times to run each set of parameters, and the reporters to be tracked'\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\anaconda3\\envs\\SEN1121\\lib\\site-packages\\mesa\\batchrunner.py\u001B[0m in \u001B[0;36m__init__\u001B[1;34m(self, model_cls, variable_parameters, fixed_parameters, iterations, max_steps, model_reporters, agent_reporters, display_progress)\u001B[0m\n\u001B[0;32m    600\u001B[0m             )\n\u001B[0;32m    601\u001B[0m         \u001B[1;32melse\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 602\u001B[1;33m             super().__init__(\n\u001B[0m\u001B[0;32m    603\u001B[0m                 \u001B[0mmodel_cls\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    604\u001B[0m                 \u001B[0mParameterProduct\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mvariable_parameters\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\anaconda3\\envs\\SEN1121\\lib\\site-packages\\mesa\\batchrunner.py\u001B[0m in \u001B[0;36m__init__\u001B[1;34m(self, model_cls, parameters_list, fixed_parameters, iterations, max_steps, model_reporters, agent_reporters, display_progress)\u001B[0m\n\u001B[0;32m    292\u001B[0m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mparameters_list\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mlist\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mparameters_list\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    293\u001B[0m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mfixed_parameters\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mfixed_parameters\u001B[0m \u001B[1;32mor\u001B[0m \u001B[1;33m{\u001B[0m\u001B[1;33m}\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 294\u001B[1;33m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_include_fixed\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mlen\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mfixed_parameters\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mkeys\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;33m>\u001B[0m \u001B[1;36m0\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    295\u001B[0m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0miterations\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0miterations\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    296\u001B[0m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mmax_steps\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mmax_steps\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mAttributeError\u001B[0m: 'int' object has no attribute 'keys'"
      ]
     }
    ],
    "source": [
-    "from mesa.batchrunner import BatchRunner 'Import the BatchRunner module from Mesa '\n",
-    "\n",
-    "import model.py\n",
+    "from mesa.batchrunner import BatchRunner\n",
+    "from model import MinimalModel\n",
     "\n",
     "parameters = {\n",
-    "    \"magnitude\": [5, 6, 7],\n",
+    "    #\"magnitude\": [5, 6, 7],\n",
     "    \"num_citizen\": [1000, 2000, 3000],\n",
     "    \"num_buildings\": [500, 1000, 1500],\n",
     "    \"num_hospitals\": [5, 10, 15],\n",
@@ -50,7 +62,7 @@
     "'keep track of the agents position and the state of the city'\n",
     "\n",
     "\n",
-    "batch_run = BatchRunner(EmergencyResponse, parameters, 10)\n",
+    "batch_run = BatchRunner(MinimalModel, parameters, 10)\n",
     "\n",
     "'specifying the model class, the parameter settings, the number of times to run each set of parameters, and the reporters to be tracked'\n",
     "\n",
