--- a/base_model_mesa/make_network_object.ipynb
+++ b/base_model_mesa/make_network_object.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "31802f56-6e7f-4d77-9ac1-f8ec2026004a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<networkx.classes.graph.Graph at 0x1064e0d0490>"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import networkx as nx\n",
     "import pandas as pd\n",
@@ -23,10 +32,55 @@
     "    positions[n]= (float(row['x']),float(row['y']))\n",
     "\n",
     "nx.set_node_attributes(G,positions,\"pos\")\n",
-    "nx.relabel_nodes(G, {15012: 0})\n",
-    "\n",
-    "G.remove_nodes_from(list(nx.isolates(G)))\n"
+    "nx.relabel_nodes(G, {15012: 0})\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{9306, 9307, 9308, 9309, 9310, 9311}, {9264, 9265, 9266}, {7632, 7633}, {9312, 9313}, {9314, 9315}]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "<networkx.classes.graph.Graph at 0x1065030dcd0>"
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "islands = [c for c in sorted(nx.connected_components(G), key=len, reverse=True)]\n",
+    "\n",
+    "islands = islands[1:]\n",
+    "print(islands)\n",
+    "\n",
+    "for i in islands:\n",
+    "    G.remove_nodes_from(i)\n",
+    "\n",
+    "G"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [],
+   "source": [
+    "with open('street_network.data', 'wb') as file:\n",
+    "    pickle.dump(G, file)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
