--- a/base_model_mesa/rich_model/BatchRun.ipynb
+++ b/base_model_mesa/rich_model/BatchRun.ipynb
@@ -2,45 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f3c1ebfc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Kaninik\\AppData\\Local\\Temp\\ipykernel_27764\\546223327.py:94: DeprecationWarning: BatchRunnerMP class has been replaced by batch_run function. Please see documentation.\n",
-      "  batch_run = BatchrunnerExtender(MinimalModel, parameters, max_steps=5)\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'<' not supported between instances of 'dict' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_27764\\546223327.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     92\u001B[0m     \u001B[1;31m#             ] = results.get_agent_vars_dataframe('Citizen')\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     93\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 94\u001B[1;33m \u001B[0mbatch_run\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mBatchrunnerExtender\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mMinimalModel\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mparameters\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mmax_steps\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;36m5\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     95\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     96\u001B[0m \u001B[1;34m'specifying the model class, the parameter settings, the number of times to run each set of parameters, and the reporters to be tracked'\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m~\\anaconda3\\envs\\SEN1121\\lib\\site-packages\\mesa\\batchrunner.py\u001B[0m in \u001B[0;36m__init__\u001B[1;34m(self, model_cls, nr_processes, **kwargs)\u001B[0m\n\u001B[0;32m    640\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    641\u001B[0m         \u001B[0msuper\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m__init__\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mmodel_cls\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;33m**\u001B[0m\u001B[0mkwargs\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 642\u001B[1;33m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mpool\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mPool\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mprocesses\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    643\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    644\u001B[0m     \u001B[1;32mdef\u001B[0m \u001B[0m_make_model_args_mp\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mself\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m~\\anaconda3\\envs\\SEN1121\\lib\\multiprocessing\\context.py\u001B[0m in \u001B[0;36mPool\u001B[1;34m(self, processes, initializer, initargs, maxtasksperchild)\u001B[0m\n\u001B[0;32m    117\u001B[0m         \u001B[1;34m'''Returns a process pool object'''\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    118\u001B[0m         \u001B[1;32mfrom\u001B[0m \u001B[1;33m.\u001B[0m\u001B[0mpool\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mPool\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 119\u001B[1;33m         return Pool(processes, initializer, initargs, maxtasksperchild,\n\u001B[0m\u001B[0;32m    120\u001B[0m                     context=self.get_context())\n\u001B[0;32m    121\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m~\\anaconda3\\envs\\SEN1121\\lib\\multiprocessing\\pool.py\u001B[0m in \u001B[0;36m__init__\u001B[1;34m(self, processes, initializer, initargs, maxtasksperchild, context)\u001B[0m\n\u001B[0;32m    202\u001B[0m         \u001B[1;32mif\u001B[0m \u001B[0mprocesses\u001B[0m \u001B[1;32mis\u001B[0m \u001B[1;32mNone\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    203\u001B[0m             \u001B[0mprocesses\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mos\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mcpu_count\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;32mor\u001B[0m \u001B[1;36m1\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 204\u001B[1;33m         \u001B[1;32mif\u001B[0m \u001B[0mprocesses\u001B[0m \u001B[1;33m<\u001B[0m \u001B[1;36m1\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    205\u001B[0m             \u001B[1;32mraise\u001B[0m \u001B[0mValueError\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m\"Number of processes must be at least 1\"\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    206\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mTypeError\u001B[0m: '<' not supported between instances of 'dict' and 'int'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from mesa.batchrunner import BatchRunnerMP\n",
+    "from mesa.batchrunner import BatchRunner\n",
     "from model import MinimalModel\n",
     "\n",
     "parameters = {\n",
     "    #\"magnitude\": [5, 6, 7],\n",
-    "    \"num_citizens\": [1000, 2000, 3000],\n",
-    "    \"num_buildings\": [500, 1000, 1500],\n",
-    "    \"num_hospitals\": [5, 10, 15],\n",
-    "    \"num_ambulances\": [25, 50, 75],\n",
-    "    \"num_doctors\": [100, 200, 300],\n",
-    "    \"dispatch_size\": [10, 20, 30]\n",
+    "    \"num_citizens\": [3000],\n",
+    "    \"num_buildings\": [100],\n",
+    "    \"num_hospitals\": [5],\n",
+    "    \"num_ambulances\": [0,1,15],\n",
+    "    \"num_doctors\": [0],\n",
+    "    \"dispatch_size\": [1,10,75]\n",
     "}\n",
     "\n",
     "'Define the parameter settings to be tested'\n",
@@ -63,67 +40,67 @@
     "\n",
     "'keep track of the agents position and the state of the city'\n",
     "\n",
-    "class BatchrunnerExtender(BatchRunnerMP):\n",
-    "        def _result_prep_mp(self, results):\n",
-    "            \"\"\"\n",
-    "            Helper Function\n",
-    "            :param results: Takes results dictionary from Processpool and single processor debug run and fixes format to\n",
-    "         make compatible with BatchRunner Output\n",
-    "         :updates model_vars and agents_vars so consistent across all batchrunner\n",
-    "         \"\"\"\n",
-    "            # Take results and convert to dictionary so dataframe can be called\n",
-    "            for model_key, model in results.items():\n",
-    "                if self.model_reporters:\n",
-    "                    self.model_vars[model_key] = self.collect_model_vars(model)\n",
-    "                if self.agent_reporters:\n",
-    "                    agent_vars = self.collect_agent_vars(model)\n",
-    "                    for agent_id, reports in agent_vars.items():\n",
-    "                        agent_key = model_key + (agent_id,)\n",
-    "                        self.agent_vars[agent_key] = reports\n",
-    "                if hasattr(model, \"datacollector\"):\n",
-    "                    if model.datacollector.model_reporters is not None:\n",
-    "                        self.datacollector_model_reporters[\n",
-    "                            model_key\n",
-    "                        ] = model.datacollector.get_model_vars_dataframe()\n",
-    "                    if model.datacollector.agent_reporters is not None:\n",
-    "                        self.datacollector_agent_reporters[\n",
-    "                            model_key\n",
-    "                        ] = model.datacollector.get_agent_vars_dataframe('Citizen')\n",
+    "class BatchrunnerExtender(BatchRunner):\n",
+    "        # def _result_prep_mp(self, results):\n",
+    "        #     \"\"\"\n",
+    "        #     Helper Function\n",
+    "        #     :param results: Takes results dictionary from Processpool and single processor debug run and fixes format to\n",
+    "        #  make compatible with BatchRunner Output\n",
+    "        #  :updates model_vars and agents_vars so consistent across all batchrunner\n",
+    "        #  \"\"\"\n",
+    "        #     # Take results and convert to dictionary so dataframe can be called\n",
+    "        #     for model_key, model in results.items():\n",
+    "        #         if self.model_reporters:\n",
+    "        #             self.model_vars[model_key] = self.collect_model_vars(model)\n",
+    "        #         if self.agent_reporters:\n",
+    "        #             agent_vars = self.collect_agent_vars(model)\n",
+    "        #             for agent_id, reports in agent_vars.items():\n",
+    "        #                 agent_key = model_key + (agent_id,)\n",
+    "        #                 self.agent_vars[agent_key] = reports\n",
+    "        #         if hasattr(model, \"datacollector\"):\n",
+    "        #             if model.datacollector.model_reporters is not None:\n",
+    "        #                 self.datacollector_model_reporters[\n",
+    "        #                     model_key\n",
+    "        #                 ] = model.datacollector.get_model_vars_dataframe()\n",
+    "        #             if model.datacollector.agent_reporters is not None:\n",
+    "        #                 self.datacollector_agent_reporters[\n",
+    "        #                     model_key\n",
+    "        #                 ] = model.datacollector.get_agent_vars_dataframe('Citizen')\n",
     "\n",
-    "        # Make results consistent\n",
-    "            if len(self.datacollector_model_reporters.keys()) == 0:\n",
-    "                self.datacollector_model_reporters = None\n",
-    "            if len(self.datacollector_agent_reporters.keys()) == 0:\n",
-    "                self.datacollector_agent_reporters = None\n",
+    "        # # Make results consistent\n",
+    "        #     if len(self.datacollector_model_reporters.keys()) == 0:\n",
+    "        #         self.datacollector_model_reporters = None\n",
+    "        #     if len(self.datacollector_agent_reporters.keys()) == 0:\n",
+    "        #         self.datacollector_agent_reporters = None\n",
     "\n",
-    "    # def run_iteration(self, kwargs, param_values, run_count):\n",
-    "    #     \"\"\" Run one iteration of the model, with the given parameters. \"\"\"\n",
-    "    #     model = self.model_cls(**kwargs)\n",
-    "    #     results = self.run_model(model)\n",
-    "    #     if param_values is not None:\n",
-    "    #         model_key = tuple(param_values) + (run_count,)\n",
-    "    #     else:\n",
-    "    #         model_key = (run_count,)\n",
-    "    #\n",
-    "    #     if self.model_reporters:\n",
-    "    #         self.model_vars[model_key] = self.collect_model_vars(model)\n",
-    "    #     if self.agent_reporters:\n",
-    "    #         agent_vars = self.collect_agent_vars(model)\n",
-    "    #         for agent_id, reports in agent_vars.items():\n",
-    "    #             agent_key = model_key + (agent_id,)\n",
-    "    #             self.agent_vars[agent_key] = reports\n",
-    "    #     # Collects data from datacollector object in model\n",
-    "    #     if results is not None:\n",
-    "    #         if results.model_reporters is not None:\n",
-    "    #             self.datacollector_model_reporters[\n",
-    "    #                 model_key\n",
-    "    #             ] = results.get_model_vars_dataframe()\n",
-    "    #         if results.agent_reporters is not None:\n",
-    "    #             self.datacollector_agent_reporters[\n",
-    "    #                 model_key\n",
-    "    #             ] = results.get_agent_vars_dataframe('Citizen')\n",
+    "    def run_iteration(self, kwargs, param_values, run_count):\n",
+    "        \"\"\" Run one iteration of the model, with the given parameters. \"\"\"\n",
+    "        model = self.model_cls(**kwargs)\n",
+    "        results = self.run_model(model)\n",
+    "        if param_values is not None:\n",
+    "            model_key = tuple(param_values) + (run_count,)\n",
+    "        else:\n",
+    "            model_key = (run_count,)\n",
+    "    \n",
+    "        if self.model_reporters:\n",
+    "            self.model_vars[model_key] = self.collect_model_vars(model)\n",
+    "        if self.agent_reporters:\n",
+    "            agent_vars = self.collect_agent_vars(model)\n",
+    "            for agent_id, reports in agent_vars.items():\n",
+    "                agent_key = model_key + (agent_id,)\n",
+    "                self.agent_vars[agent_key] = reports\n",
+    "        # Collects data from datacollector object in model\n",
+    "        if results is not None:\n",
+    "            if results.model_reporters is not None:\n",
+    "                self.datacollector_model_reporters[\n",
+    "                    model_key\n",
+    "                ] = results.get_model_vars_dataframe()\n",
+    "            if results.agent_reporters is not None:\n",
+    "                self.datacollector_agent_reporters[\n",
+    "                    model_key\n",
+    "                ] = results.get_agent_vars_dataframe('Citizen')\n",
     "\n",
-    "run = batch_run(MinimalModel, parameters, max_steps=5)\n",
+    "batch_run = BatchrunnerExtender(MinimalModel, parameters, max_steps=500)\n",
     "\n",
     "'specifying the model class, the parameter settings, the number of times to run each set of parameters, and the reporters to be tracked'\n",
     "\n",
@@ -134,10 +111,6 @@
     "results = batch_run.get_model_vars_dataframe()\n",
     "\n",
     "'Collect and analyze the results of the batch run to get the dataframe of the results'\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -152,7 +125,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "SEN1211",
    "language": "python",
    "name": "python3"
   },
@@ -166,7 +139,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.15"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "354f996f48fb57d138399b46dff29dd7450e93dddf827cbdf04c23a6f7eef195"
+   }
   }
  },
  "nbformat": 4,
