--- a/base_model_mesa/rich_model/BatchRun.ipynb
+++ b/base_model_mesa/rich_model/BatchRun.ipynb
@@ -123,7 +123,7 @@
     "    #                 model_key\n",
     "    #             ] = results.get_agent_vars_dataframe('Citizen')\n",
     "\n",
-    "run = batch_run(MinimalModel, parameters, max_steps=5)\n",
+    "batch_run = batch_run(MinimalModel, parameters, max_steps=5)\n",
     "\n",
     "'specifying the model class, the parameter settings, the number of times to run each set of parameters, and the reporters to be tracked'\n",
     "\n",
